[package]
name = "app"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["logging", "panic"]
logging = ["log", "console_log"]
panic = ["console_error_panic_hook"]

[dependencies]
yew = "0.17.3"
wasm-bindgen = "0.2.67"
cfg-if = "0.1.10"
anyhow = "1.0.32"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
log = { version = "0.4.11", optional = true }
console_log = { version = "0.2.0", features = ["color"], optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.44"
features = [
    "RequestMode"
]
